Size classes working better now. Still no luck with Archiver

--- a/PL-class-roster/PL-class-roster/Base.lproj/Main.storyboard
+++ b/PL-class-roster/PL-class-roster/Base.lproj/Main.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="lbw-V6-L1G">
-                                <rect key="frame" x="0.0" y="-6" width="320" height="574"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="lbw-V6-L1G">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="606"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="qIy-eE-YHN">
@@ -43,6 +43,22 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lbw-V6-L1G" secondAttribute="bottom" constant="-6" id="5kH-U6-NE2"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="lbw-V6-L1G" secondAttribute="bottom" constant="-6" id="AWi-59-3zT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lbw-V6-L1G" secondAttribute="trailing" id="Ccf-kx-6vG"/>
+                            <constraint firstItem="lbw-V6-L1G" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="MEB-gd-pUT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lbw-V6-L1G" secondAttribute="trailing" constant="-16" id="PZc-2y-7Ch"/>
+                            <constraint firstItem="lbw-V6-L1G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="XqE-x0-uR2"/>
+                            <constraint firstItem="lbw-V6-L1G" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="dH8-LH-f54"/>
+                            <constraint firstItem="lbw-V6-L1G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="qzc-3P-nWQ"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Ccf-kx-6vG"/>
+                                <exclude reference="XqE-x0-uR2"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="HcY-sr-COl">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="0AW-DO-woi">
@@ -65,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2350.5" y="106.5"/>
+            <point key="canvasLocation" x="2350" y="106"/>
         </scene>
         <!--Person View Controller-->
         <scene sceneID="uY3-ID-8Qn">
@@ -79,10 +95,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="4lW-Rs-LRs">
+                                <rect key="frame" x="200" y="240" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="6yf-fZ-km4"/>
+                                    <constraint firstAttribute="width" constant="200" id="90R-rf-oC9"/>
+                                </constraints>
+                                <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="66" y="216" width="668" height="49"/>
+                                </variation>
+                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name:" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="x5x-e4-BFi">
                                 <rect key="frame" x="252" y="100" width="96" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="FdT-oz-qOk"/>
+                                    <constraint firstAttribute="height" constant="30" id="SUU-aV-e4W"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="FdT-oz-qOk"/>
+                                        <exclude reference="SUU-aV-e4W"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="FdT-oz-qOk"/>
+                                        <include reference="SUU-aV-e4W"/>
+                                    </mask>
+                                </variation>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                     <rect key="frame" x="100" y="330" width="200" height="30"/>
                                 </variation>
@@ -91,9 +133,25 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CAz-PS-lio">
-                                <rect key="frame" x="255" y="158" width="91" height="30"/>
+                                <rect key="frame" x="255" y="160" width="91" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="hnT-W3-duC"/>
+                                    <constraint firstAttribute="height" constant="30" id="wNh-UW-pMY"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="hnT-W3-duC"/>
+                                        <exclude reference="wNh-UW-pMY"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="hnT-W3-duC"/>
+                                        <include reference="wNh-UW-pMY"/>
+                                    </mask>
+                                </variation>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                     <rect key="frame" x="100" y="381" width="200" height="30"/>
                                 </variation>
@@ -101,18 +159,30 @@
                                     <outlet property="delegate" destination="V80-iO-fdx" id="efc-FI-cff"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="4lW-Rs-LRs">
-                                <rect key="frame" x="66" y="216" width="468" height="249"/>
-                                <variation key="heightClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="88" y="162" width="250" height="250"/>
-                                </variation>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yyq-dL-1xh">
-                                <rect key="frame" x="37" y="513" width="526" height="38"/>
+                                <rect key="frame" x="229" y="490" width="142" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="FBJ-7b-eEK"/>
+                                    <constraint firstAttribute="width" constant="200" id="SXu-Pw-mgU">
+                                        <variation key="heightClass=compact" constant="200"/>
+                                    </constraint>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Change Picture">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="FBJ-7b-eEK"/>
+                                        <exclude reference="SXu-Pw-mgU"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="FBJ-7b-eEK"/>
+                                        <include reference="SXu-Pw-mgU"/>
+                                    </mask>
+                                </variation>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
                                     <rect key="frame" x="75" y="722" width="250" height="38"/>
                                 </variation>
@@ -123,20 +193,53 @@
                         </subviews>
                         <color key="backgroundColor" red="0.6309815359117259" green="0.86670137049679152" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="4lW-Rs-LRs" secondAttribute="trailing" constant="50" id="0Uh-aP-ago"/>
                             <constraint firstItem="x5x-e4-BFi" firstAttribute="top" secondItem="D4x-9H-4t8" secondAttribute="topMargin" constant="100" id="12O-pP-gnZ"/>
                             <constraint firstAttribute="centerX" secondItem="CAz-PS-lio" secondAttribute="centerX" id="1uM-vn-eTs"/>
-                            <constraint firstItem="ORA-um-Koz" firstAttribute="top" secondItem="yyq-dL-1xh" secondAttribute="bottom" constant="49" id="Ngo-fN-O7b"/>
-                            <constraint firstItem="4lW-Rs-LRs" firstAttribute="top" secondItem="x5x-e4-BFi" secondAttribute="bottom" constant="86" id="QIq-8a-b2K"/>
+                            <constraint firstItem="x5x-e4-BFi" firstAttribute="leading" secondItem="CAz-PS-lio" secondAttribute="leading" id="8Dl-aQ-ecS"/>
+                            <constraint firstItem="4lW-Rs-LRs" firstAttribute="top" secondItem="CAz-PS-lio" secondAttribute="bottom" constant="50" id="9em-kT-nL9"/>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="leading" secondItem="4lW-Rs-LRs" secondAttribute="trailing" constant="50" id="I9w-i6-6Ti"/>
+                            <constraint firstItem="x5x-e4-BFi" firstAttribute="centerX" secondItem="yyq-dL-1xh" secondAttribute="centerX" id="IBj-SV-had"/>
+                            <constraint firstItem="CAz-PS-lio" firstAttribute="top" secondItem="x5x-e4-BFi" secondAttribute="bottom" constant="30" id="JVK-VA-2AU"/>
                             <constraint firstAttribute="centerX" secondItem="yyq-dL-1xh" secondAttribute="centerX" id="QJB-cR-Mig"/>
-                            <constraint firstItem="4lW-Rs-LRs" firstAttribute="leading" secondItem="yyq-dL-1xh" secondAttribute="leading" constant="29" id="Ut3-Ey-wpb"/>
-                            <constraint firstItem="CAz-PS-lio" firstAttribute="top" secondItem="D4x-9H-4t8" secondAttribute="topMargin" constant="158" id="cN7-ak-GIr"/>
+                            <constraint firstItem="ORA-um-Koz" firstAttribute="top" secondItem="yyq-dL-1xh" secondAttribute="bottom" constant="102" id="Xvd-xT-Wur">
+                                <variation key="heightClass=compact" constant="70"/>
+                            </constraint>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="top" secondItem="CAz-PS-lio" secondAttribute="bottom" constant="50" id="d0q-JG-zLo"/>
                             <constraint firstAttribute="centerX" secondItem="x5x-e4-BFi" secondAttribute="centerX" id="gGW-ND-CG0"/>
-                            <constraint firstItem="yyq-dL-1xh" firstAttribute="top" secondItem="4lW-Rs-LRs" secondAttribute="bottom" constant="48" id="lqU-TS-rN9"/>
+                            <constraint firstItem="4lW-Rs-LRs" firstAttribute="leading" secondItem="D4x-9H-4t8" secondAttribute="leadingMargin" constant="50" id="kru-rR-842"/>
                             <constraint firstAttribute="centerX" secondItem="4lW-Rs-LRs" secondAttribute="centerX" id="n11-Pd-62c"/>
-                            <constraint firstItem="4lW-Rs-LRs" firstAttribute="leading" secondItem="D4x-9H-4t8" secondAttribute="leadingMargin" constant="50" id="rsq-6M-VNm"/>
-                            <constraint firstItem="4lW-Rs-LRs" firstAttribute="top" secondItem="PgV-GH-zK5" secondAttribute="bottom" constant="152" id="sK1-AZ-uji"/>
+                            <constraint firstAttribute="centerY" secondItem="4lW-Rs-LRs" secondAttribute="centerY" id="op3-wo-q7o"/>
+                            <constraint firstItem="yyq-dL-1xh" firstAttribute="top" secondItem="4lW-Rs-LRs" secondAttribute="bottom" constant="50" id="x3q-oc-lxK"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="kru-rR-842"/>
+                                <exclude reference="op3-wo-q7o"/>
+                                <exclude reference="8Dl-aQ-ecS"/>
+                                <exclude reference="IBj-SV-had"/>
+                                <exclude reference="Xvd-xT-Wur"/>
+                                <exclude reference="I9w-i6-6Ti"/>
+                                <exclude reference="d0q-JG-zLo"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="9em-kT-nL9"/>
+                                <include reference="kru-rR-842"/>
+                                <exclude reference="n11-Pd-62c"/>
+                                <include reference="op3-wo-q7o"/>
+                                <exclude reference="12O-pP-gnZ"/>
+                                <include reference="8Dl-aQ-ecS"/>
+                                <include reference="IBj-SV-had"/>
+                                <exclude reference="gGW-ND-CG0"/>
+                                <include reference="Xvd-xT-Wur"/>
+                                <exclude reference="1uM-vn-eTs"/>
+                                <include reference="I9w-i6-6Ti"/>
+                                <exclude reference="QJB-cR-Mig"/>
+                                <include reference="d0q-JG-zLo"/>
+                                <exclude reference="x3q-oc-lxK"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="E8v-cI-iXO"/>
                     <connections>
@@ -147,7 +250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6E-68-v5j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3259" y="97"/>
+            <point key="canvasLocation" x="3255" y="106"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XaL-3l-o4G">
